SubCInterpreter/Test/declaration/errors/array_missing_dimension.c
int test(){

  //int a[];  // error
  char b[];  // error

  return 0;
}


int main(){

  test();

  return 0;
}
